# paniz_image

./: CONTRIBUTING.rst  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  installation.rst  modules.rst  paniz_image.rst  usage.ipynb
paniz_image/: paniz_image.py
src/paniz_image/: paniz_image.py
tests/: test_paniz_image.py
