[tool.poetry]
name = "paniz_image"
version = "0.1.0"
description = "A package for working with images!"
authors = ["Paniz Fazlali"]
license = "MIT"
readme = "README.md"
documentation = "https://paniz_image.readthedocs.io/en/latest/"
homepage = "https://github.com/paradise1260/paniz_image"
repository = "https://github.com/paradise1260/paniz_image"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.0.3"
nbsphinx = "^0.8.6"
ipykernel = "^6.0.1"
sphinx-autoapi = "^1.8.1"
sphinx-rtd-theme = "^0.5.2"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.4"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
codecov = "^2.1.11"
python-semantic-release = "^7.16.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "picturepyfect/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
